--- a/src/app/modules/categories/ui/category-table/category-table.component.html
+++ b/src/app/modules/categories/ui/category-table/category-table.component.html
@@ -21,7 +21,7 @@
       <td>{{ category.name }}</td>
       <td>
         <p-tag
-          *ngIf="category.active; else inactive"
+          *ngIf="category.isActive; else inactive"
           severity="success"
           value="Active"
           i18n-value
