Create facade and refactory the code

--- a/src/app/modules/categories/ui/category-table/category-table.component.html
+++ b/src/app/modules/categories/ui/category-table/category-table.component.html
@@ -38,7 +38,7 @@
         <p-button
           icon="pi pi-pencil"
           styleClass="p-button-rounded p-button-warning p-button-text"
-          (onClick)="editCategory.emit(category.id)" />
+          (onClick)="selected.emit(category.id)" />
         <p-button
           icon="pi pi-trash"
           styleClass="p-button-rounded p-button-danger p-button-text"
